@@ -73,18 +73,20 @@ SKIP: {
   $popup -> attach($button);
   $popup -> attach($button, undef);
 
-#  my $event = Gtk2::Gdk::Event -> new("button_press");
-#
-#  $popup -> do_popup(
-#    sub {
-#      my ($menu) = @_;
-#      return 23, 42;
-#    },
-#    undef,
-#    $event,
-#    undef,
-#    $button
-#  );
+  if (join("", Gtk2 -> get_version_info()) >= 220) {
+    my $event = Gtk2::Gdk::Event -> new("button_press");
+
+    $popup -> do_popup(
+      sub {
+        my ($menu) = @_;
+        return 23, 42;
+      },
+      undef,
+      $event,
+      undef,
+      $button
+    );
+  }
 
   # FIXME: how to make it return?
   # $popup -> do_popup_modal(
